<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp"
        tools:context="com.example.android.popular_movie.MovieDetailsActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:context="com.example.android.popular_movie.MovieDetailsActivity">

            <ImageView
                android:id="@+id/iv_movie"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/movie_image_content_description"
                android:paddingBottom="24dp"
                android:paddingRight="12dp"
                 />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/CustomLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_label_title" />

                <TextView
                    android:id="@+id/tv_Title"
                    style="@style/CustomText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    style="@style/CustomLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_label_rate" />

                <TextView
                    android:id="@+id/tv_vote"
                    style="@style/CustomText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    style="@style/CustomLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_label_date" />

                <TextView
                    android:id="@+id/tv_release_date"
                    style="@style/CustomText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            style="@style/CustomLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_label_synopsis" />

        <TextView
            android:id="@+id/tv_Synopsis"
            style="@style/CustomText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>